Fix disclosure triangles being visible in the block menu

--- a/stylesheets/blocks.css
+++ b/stylesheets/blocks.css
@@ -361,7 +361,7 @@
   content: "▶"
 }
 
-.block_menu .disclosure{
+.block-menu .disclosure{
   display: none;
 }
 
